--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-curl": "*",
         "symfony/event-dispatcher": ">=2.4",
         "symfony/options-resolver": ">=2.6",
-        "guzzlehttp/guzzle": "~6.0",
+        "guzzlehttp/guzzle": "~6.0||^7.0",
         "psr/log": "~1.0",
         "doctrine/cache": "^1.6",
         "kevinrob/guzzle-cache-middleware": "^1.2 || ^2.0",
